[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erelas"
version = "0.1.0"
description = "Tiny heartbeat / cron-job monitoring client for Erelas (a Cronitor-style monitor)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Dan Paulson" }]
keywords = ["monitoring", "cron", "heartbeat", "uptime", "cronitor"]
dependencies = ["requests>=2.20"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/vindi-gg/erelas-py"
Repository = "https://github.com/vindi-gg/erelas-py"

[tool.hatch.build.targets.wheel]
packages = ["erelas"]
